# teampilot

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.env  deploy.env.example  deploy.sh  docker-compose.yml
backend/: Dockerfile  migrate_project_goal.py  pyproject.toml  seed_demo.py  seed_new_projects.py
backend/app/: config.py  database.py  dependencies.py  main.py  permissions.py
backend/app/api/: ai.py  auth.py  capabilities.py  dashboard.py  data_skills.py  permissions.py  projects.py  reports.py  router.py  skills.py  tasks.py  users.py
backend/app/models/: __init__.py  assignment.py  capability_profile.py  data_skill.py  permission.py  project.py  skill.py  system_setting.py  task.py  task_event.py  task_progress.py  user.py
backend/app/schemas/: auth.py  dashboard.py  data_skill.py  project.py  skill.py  task.py  user.py
backend/app/services/: auth_service.py  capability_service.py  dashboard_service.py  data_skill_service.py  project_service.py  report_metrics.py  report_service.py  task_service.py  user_service.py
backend/app/services/ai/: capability_analysis.py  errors.py  llm_client.py  progress_import.py  project_automation.py  prompt_loader.py  prompts.py  risk_analysis.py  task_assignment.py  task_decompose.py  task_estimate.py
backend/app/utils/: pagination.py  security.py
backend/app/websocket/: events.py  manager.py
backend/tests/: conftest.py  test_auth.py  test_dashboard.py  test_data_skills.py  test_health.py  test_permissions.py  test_projects.py  test_reports.py  test_skills.py  test_tasks.py  test_users.py
docs/: API.md  (+5 more)
(+44 files in other folders)
