[project]
name = "project-mgmt-backend"
version = "0.1.0"
description = "项目任务进度管理系统后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.28",
    "cryptography>=44.0",
    "python-multipart>=0.0.18",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
